# artifact_registry

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DATABASE_SYNC.md  INSTALL.md  INSTALL_FRONTEND.md  Markdown_Syntax_Guide.md  README.md  Status implementation plan.md  USERS_GUIDE.md  allow_network_access.ps1  app.allow  artifact_registry.py  backup_database.ps1  check_db_status.py  check_doc_images.py  cleanup_orphans.py  debug_db.py  debug_diagrams.py  debug_routes.py  drop_database.ps1  fix_document_urls.py  fix_people_data.py  full_install.ps1  migrate_add_artifact_events.py  migrate_add_component_description.py  migrate_add_component_position.py  migrate_add_component_tags_lifecycle.py  migrate_add_content_text.py  migrate_add_diagram_edges.py  migrate_add_diagram_filters.py  migrate_add_diagrams.py  migrate_add_vision_area.py  migrate_db.ps1  need_TR2-AIC2-NEED-002_2025-12-07.json  pyproject.toml  restore_database.ps1  start_db.ps1  stop_db.ps1  sync_database.py  (+4 more)
alembic/: migration_1.py
app/: enums.py  main.py
data_archives/: aic2_needs.json  need_TR2-AIC2-NEED-002_2025-12-07.json  rsm_needs.json  test.txt  tr2-aci2-need-001.json
db_backups/: registry_backup_2025-12-07_170654.sql  registry_backup_20251207_171123.dump  registry_backup_20251207_171404.dump  registry_backup_20251207_172730.sql  registry_backup_20251208_143801.sql  registry_backup_20251209_144533.sql  registry_backup_20251210_124517.sql  registry_backup_20251210_204656.sql  registry_backup_20251211_142128.sql  registry_backup_20251212_090955.sql  registry_backup_20251212_115213.sql  (+7 more)
(+264 files in other folders)
