[project]
name = "artifact_registry"
version = "0.1.1"
requires-python = ">=3.12"  # Suppresses default warning
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "pydantic[email]",
    "python-jose[cryptography]",
    "passlib[argon2]", # Argon2 for bcrypt alternative
    "python-multipart",
    "pydantic-settings>=2.12.0",
    "jwt>=1.4.0",
    "pyjwt[crypto]>=2.10.1",
    "alembic>=1.17.1",
    "requests>=2.32.5",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "deep-translator>=1.11.4",
    "psycopg2>=2.9.11",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
    "pytest-asyncio"
]  # FIXED: Modern group syntax

[tool.uv]
# No more deprecated tool.uv.dev-dependencies